@@ -19,6 +19,7 @@
 
 #include <config.h>
 #include <stdlib.h>
+#include <math.h>
 #include <gsl/gsl_errno.h>
 #include <gsl/gsl_histogram2d.h>
 
