@@ -1,3 +1,7 @@
+Fri Jan 18 21:45:35 2002  Brian Gough  <bjg@network-theory.co.uk>
+
+	* stat2d.c: functions to compute statistics of 2d histograms
+
 Mon Jan 14 19:34:31 2002  Brian Gough  <bjg@network-theory.co.uk>
 
 	* stat.c (gsl_histogram_sum): new function to sum bins (Achim
